# NSU

./: in.txt
OPP/: ex.clog2  ex.slog2  task1  task1.c
OPP/lab1/: 16core.sh.o482666  17206NPP03_01.docx  17206NPP03_01.odt  1core.sh  2core.sh  4core.sh  8core.sh  ex  lab1a.c  lab1b.c  table.ods
OPP/lab2/: .lab2a.c.swp  17206NPP03_02.odt  data 2 lab.ods  ex  lab22.c  lab2a.c  lab2sch.c
OPP/lab3/: ex  ex.clog2  ex.slog2  lab1a.c  lab3.c  test.c
OPP/lab4/: lab4.c  test.c
OS/: .task2.c.swp  task2.c
OS/task1/: brechka@solarka.ccfit.nsu.ru  task1.c
OS/task2/: .task2.c.swp  ex  task2  task2.c  tmp.c
OS/task3/: task3.c
OS/task4/: ex  task4.c
OS/test/: 123  test.c
lab1/: 16core.sh  16core.sh.e482674  16core.sh.o482667  16core.sh.o482674  1core.sh  ex  ex.clog2
tv/: calculate.c
СС/oldrepo/task1/: CMakeLists.txt  main.cpp
СС/oldrepo/task1/Tests/: CMakeLists.txt
СС/task2/: CMakeLists.txt  CalcEx.h  ConExecute.cpp  ConExecute.h  StackCalc.cpp  StackCalc.h  main.cpp
СС/task2/Commands/: Command.h  CommandFactory.cpp  CommandFactory.h  CommandMaker.h  Define.cpp  Define.h  Divide.cpp  Divide.h  Minus.cpp  Minus.h  Multiply.cpp  Multiply.h  Plus.cpp  Plus.h  Pop.cpp  Pop.h  Print.cpp  Print.h  Push.cpp  Push.h  Sqrt.cpp  Sqrt.h
СС/task3/: BattleShipEx.h  CMakeLists.txt  Controller.cpp  Controller.h  Factory.cpp  Factory.h  Interfaces.h  Maker.h  Model.cpp  Model.h  main.cpp
СС/task3/GamerType/: ConsoleGamer.cpp  ConsoleGamer.h  OptimalGamer.cpp  OptimalGamer.h  RandomGamer.cpp  RandomGamer.h
СС/task3/ViewType/: ConsoleView.cpp  ConsoleView.h
(+67 files in other folders)
